force-app/main/default/objects/Partners__c/Partners__c.object-meta.xml
<CustomObject>
    <description>Used to track our Reseller and Referral partners and their related commissions. Used by channel sales and accounting departments.</description>
    <label>Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>