force-app/main/default/objects/Partners__c/fields/Commission_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_2__c</fullName>
    <inlineHelpText>Months 6-12</inlineHelpText>
    <label>Commission Rate 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>