force-app/main/default/objects/Partners__c/fields/Commission_Rate_3__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_3__c</fullName>
    <inlineHelpText>Months 12-24</inlineHelpText>
    <label>Commission Rate 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>