force-app/main/default/objects/Partners__c/fields/Fixed_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Commission_Rate__c</fullName>
    <label>Fixed Commission Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>