force-app/main/default/objects/Partners__c/fields/Reseller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Phone__c</fullName>
    <label>Reseller Phone</label>
    <type>Phone</type>
</CustomField>