force-app/main/default/objects/Partners__c/fields/RT_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Partner_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT Partner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>