force-app/main/default/objects/Partners__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Allows us to determine if the partner is a currently active partner. Active partners will appear on commission billing reports.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>