force-app/main/default/objects/Partners__c/fields/Venders_Sold__c.field-meta.xml
<CustomField>
    <fullName>Venders_Sold__c</fullName>
    <label>Venders Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Go-To Meeting</fullName>
            </value>
            <value>
                <fullName>WebEx</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>