force-app/main/default/objects/Partners__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Commission_Rate_1__c</columns>
    <columns>Commission_Rate_2__c</columns>
    <columns>Commission_Rate_3__c</columns>
    <columns>Commission_Rate_4__c</columns>
    <columns>Fixed_Commission_Rate__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>