force-app/main/default/objects/Partners__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Commission_Rate_1__c</columns>
    <columns>Commission_Rate_2__c</columns>
    <columns>Commission_Rate_3__c</columns>
    <columns>Commission_Rate_4__c</columns>
    <columns>Fixed_Commission_Rate__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active</label>
    <language>en_US</language>
</ListView>